--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-langchain>=0.0.267
-openai>=0.27.0
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-community>=0.0.10
+openai>=1.12.0
 streamlit>=1.28.0
 pandas>=2.0.0
 plotly>=5.15.0
-python-dotenv>=1.0.0
 requests>=2.31.0
 chromadb>=0.4.13
 supabase>=2.0.0
 python-json-logger>=2.0.0
-langchain-openai
+tiktoken>=0.5.2
+beautifulsoup4>=4.12.0
+newsapi-python>=0.2.7
+numpy>=1.24.0
