--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 langchain>=0.1.0
 langchain-openai>=0.0.5
 langchain-community>=0.0.10
+langchain-chroma>=0.0.5
 openai>=1.12.0
 streamlit>=1.28.0
 pandas>=2.0.0
@@ -13,6 +14,5 @@ tiktoken>=0.5.2
 beautifulsoup4>=4.12.0
 newsapi-python>=0.2.7
 numpy>=1.24.0
+pysqlite3-binary>=0.5.2
 fpdf
-langchain-chroma
-chromadb
