--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,11 @@ streamlit>=1.28.0
 pandas>=2.0.0
 plotly>=5.15.0
 requests>=2.31.0
-chromadb>=0.4.13
+chromadb==0.3.29
 supabase>=2.0.0
 python-json-logger>=2.0.0
 tiktoken>=0.5.2
 beautifulsoup4>=4.12.0
 newsapi-python>=0.2.7
 numpy>=1.24.0
-pysqlite3-binary>=0.5.2
 fpdf
